<resources>
    <string name="app_name">Antifurto</string>
    <string name="app_name_sensors">Sensori</string>
    <string name="app_name_log">Log</string>
    <string name="app_name_debug">Debug</string>
    <string name="app_name_about">About</string>
    <string name="text_sensors">Sensori</string>
    <string name="text_log">Log</string>
    <string name="text_about">About</string>
    <string name="text_supersu">Debug</string>
    <string name="text_help">Premere il pulsante di accensione per avviare l\'app!</string>
    <string name="text_help_1">Premere il pulsante di refresh per aggiornare i dati!</string>
    <string name="string_log">Nessun log, prova a dare le autorizzazioni per l\'accesso alla memoria</string>

</resources>